updated card canvas, api testing

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .canvas {
+            width: 100%;
+            height: 2000px;
+        }
+    </style>
 </head>
 <body>
-hello world
+<h1 style="align-content: center">Events List</h1>
+<div>
+    <iframe src="/cardcanvas" title="cardcanvas" class="canvas"></iframe>
+</div>
+
 </body>
 </html>
