--- a/FrontEnd/src/components/Header/index.css
+++ b/FrontEnd/src/components/Header/index.css
@@ -4,12 +4,11 @@
   height: 116px;
   display: flex;
   justify-content:space-between;
-  padding-right: 90px;
 }
 .isHeader_left {
   display: flex;
   padding-left: 20px;
-  max-width: 50%;
+  max-width: 55%;
   min-width: 335px;
   align-items: center;
 }
@@ -21,6 +20,8 @@
 background-size:cover;
 }
 .isHeader_right {
+  margin-right: 90px;
+  max-width: 53%;
   display: flex;
   padding-left: 35px;
   align-items: center;
@@ -34,8 +35,8 @@ background-size:cover;
   max-width: 130px;
 }
 .isHeader_right_btn {
-  width: 80px;
-  height: 42px;
+  min-width: 80px;
+  min-height: 42px;
   line-height: 42px;
   text-align: center;
   color: white;
