--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-        .canvas {
-            width: 100%;
-            height: 2000px;
-        }
-    </style>
-</head>
-<body>
-<h1 style="align-content: center">Events List</h1>
-<div>
-    <iframe src="/cardcanvas" title="cardcanvas" class="canvas"></iframe>
-</div>
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/header_logo.png" />
+  <title>firends</title>
+  <style>
+    .isActive {
+      font-weight: 700;
+      font-size: 20px;
+      margin-right: 30px;
+      min-width: 130px;
+      max-width: 130px;
+      color: #1f6256;
+    }
+    html body {
+      overflow-x: scroll;
+    }
+
+    html::-webkit-scrollbar {
+      /*滚动条整体样式*/
+
+      width: 10px;
+      /*高宽分别对应横竖滚动条的尺寸*/
+
+      height: 1px;
+
+    }
+
+  </style>
+</head>
+
+<body>
+  <div id="root"></div>
 </body>
+
 </html>
