--- a/templates/FrontEnd/public/index.html
+++ b/templates/FrontEnd/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="shortcut icon" href="%PUBLIC_URL%/header_logo.png" />
-  <title>firends</title>
+  <title>Gathero</title>
   <style>
     .isActive {
       font-weight: 700;
