--- a/FrontEnd/src/pages/Activites/index.css
+++ b/FrontEnd/src/pages/Activites/index.css
@@ -202,15 +202,11 @@
 }
 
 .isList .right {
-  /* width: 30%; */
+  width: 30%;
   margin-top: 30px;
   display: flex;
   flex-direction: column;
   margin-right: 400px;
-  min-width: 372px;
-  max-width: 372px;
-  min-height: 397px;
-  max-height: 397px;
 }
 
 .isList .right .box {
