--- a/FrontEnd/src/components/Sport/index.css
+++ b/FrontEnd/src/components/Sport/index.css
@@ -102,8 +102,9 @@
 
 .gameText {
   margin-top: 38px;
-  font-size: 11px;
+  font-size: 16px;
   color: #333333;
+  font-weight: 700;
 }
 
 .text {
